# contact-form-smtp

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  README.md  pyproject.toml  tox.ini
contact_form_smtp/: app.py  cli.py  settings.py  version.py
contactform/: __init__.py  cli.py  version.py
docs/: Makefile  cli.rst  conf.py  contact_form_smtp.rst  index.rst  installation.rst  make.bat  modules.rst
make.include/: common.mk  lint.mk  publish.mk
tests/: __init__.py  test_contactform.py
